[metadata]
name = popsh
version = 0.9.1
author = Philippe Grégoire
author_email = git@pgregoire.xyz
description = An offensive payload generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/pgregoire/pop
project_urls =
    Bug Tracker = https://gitlab.com/pgregoire/pop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .


[pycodestyle]
ignore = E501
